--- a/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
@@ -108,17 +108,20 @@
                         <Grid Grid.Row="3" Grid.Column="1">
                             <StackPanel>
                                 <TextBlock FontSize="20" FontFamily="Segoe UI" FontWeight="Normal">Recent Activity</TextBlock>
-                                <ItemsControl x:Name="RecentSamplesItemsControl"
-                                              Margin="0,16,0,0" 
-                                              ItemsPanel="{StaticResource ItemsWrapGridHorizontalTemplate}"
-                                              ItemsSource="{x:Bind RecentSamples, Mode=OneWay}" ItemTemplate="{StaticResource SampleTemplate}">
-                                </ItemsControl>
 
-                                <TextBlock Text="None" 
+                                <Grid Margin="0,16,0,0">
+                                    <TextBlock Text="None" 
                                            Opacity="0.5" 
                                            FontFamily="Segoe UI" 
                                            FontSize="12" 
                                            Visibility="{x:Bind local:About.VisibleIfCollectionEmpty(RecentSamples), Mode=OneWay}"></TextBlock>
+                                    <ItemsControl x:Name="RecentSamplesItemsControl"
+                                              MinHeight="130"
+                                              ItemsPanel="{StaticResource ItemsWrapGridHorizontalTemplate}"
+                                              ItemsSource="{x:Bind RecentSamples, Mode=OneWay}" ItemTemplate="{StaticResource SampleTemplate}">
+                                    </ItemsControl>
+                                </Grid>
+
                             </StackPanel>
 
                         </Grid>
