--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Saturation/SaturationBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Saturation/SaturationBehaviorPage.xaml
@@ -19,24 +19,19 @@
                    TextWrapping="Wrap"
                    Visibility="Collapsed" />
 
-        <Image x:Name="MyImage"
-               Source="ms-appx:///Assets/Photos/BigFourSummerHeat.jpg">
+        <Grid x:Name="XamlRoot" />
+        
+        <!-- Shallow Copy -->
+        <Image>
             <interactivity:Interaction.Behaviors>
-                <behaviors:Saturation x:Name="SaturationBehavior"
-                                AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"
-                                Delay="{Binding Delay.Value, Mode=OneWay}"
-                                Value="{Binding Value.Value, Mode=OneWay}"
-                                Duration="{Binding Duration.Value, Mode=OneWay}" />
+                <behaviors:Saturation  />
             </interactivity:Interaction.Behaviors>
         </Image>
-        <StackPanel HorizontalAlignment="Right"
-                    VerticalAlignment="Bottom">
-            <Button Margin="10"
-                    Content="Apply">
+        <StackPanel Visibility="Collapsed">
+            <Button>
                 <interactivity:Interaction.Behaviors>
                     <core:EventTriggerBehavior EventName="Click">
-                        <core:CallMethodAction MethodName="StartAnimation"
-                                               TargetObject="{Binding ElementName=SaturationBehavior}" />
+                        <core:CallMethodAction />
                     </core:EventTriggerBehavior>
                 </interactivity:Interaction.Behaviors>
             </Button>
