--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ViewExtensions/ViewExtensionsPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ViewExtensions/ViewExtensionsPage.xaml
@@ -13,5 +13,5 @@
       extensions:TitleBar.ForegroundColor="White"
       mc:Ignorable="d">
 
-    <Grid Background="{StaticResource Brush-Grey-05}" />
+    <Grid />
 </Page>
